--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -8,7 +8,7 @@
 		x:Name="GraphCalculator" 
 		x:Class="Telesyk.GraphCalculator.WPF.MainWindow"
         mc:Ignorable="d"
-        Title="Калькулятор графів" Width="462" Height="486" ResizeMode="CanMinimize" FontSize="14" WindowStyle="SingleBorderWindow">
+        Title="Калькулятор графів" Width="720"  Height="373" ResizeMode="CanMinimize" FontSize="14" WindowStyle="SingleBorderWindow">
 	<Grid Background="#FF61BBF9">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="31" />
@@ -17,8 +17,9 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="20" />
 			<RowDefinition />
+			<RowDefinition Height="18" />
 		</Grid.RowDefinitions>
-		<Menu Grid.ColumnSpan="2" Background="#FF424344" Foreground="White" Margin="0,0,0,0">
+		<Menu Grid.ColumnSpan="2" Background="#3a5168" Foreground="White" Margin="0,0,0,0">
 			<MenuItem Header="Файл" Foreground="White">
 				<MenuItem x:Name="menuOpen" Header="Відкрити…" Foreground="black" Click="menuOpen_Click" />
 				<MenuItem x:Name="menuSave" Header="Зберегти…" Foreground="black" Click="menuSave_Click" />
@@ -30,12 +31,16 @@
 			<MenuItem Header="Про програму" Foreground="White" />
 		</Menu>
 		<ucl:TabMenuUserControl x:Name="controlTabMenu" Grid.Row="1" Background="#FFF9EFB8" />
-		<StackPanel Grid.Column="2" Grid.Row="2">
+		<StackPanel Grid.Column="2" Grid.Row="1">
 			<ucl:SetValuesUserControl x:Name="controlSetValues" Visibility="Collapsed" />
 			<ucl:PlacementUserControl x:Name="controlPlacement" Visibility="Collapsed" />
 			<ucl:FunctionsUserControl x:Name="controlFunctions" Visibility="Collapsed" />
 			<ucl:FunctionsUserControl x:Name="controlLimitationFunctions" Visibility="Collapsed" IsLimitation="True" />
 			<ucl:CalculationUserControl x:Name="controlCalculation" Visibility="Collapsed" />
+		</StackPanel>
+		<StackPanel Orientation="Horizontal" Grid.Row="3" Grid.ColumnSpan="2" Background="#0078d7">
+			<TextBlock Foreground="#FFF9EFB8" FontSize="12" Margin="3,0">Поточний стан:</TextBlock>
+			<TextBlock x:Name="textState" Foreground="White" FontSize="12" Margin="3,0">Множина значень</TextBlock>
 		</StackPanel>
 	</Grid>
 </Window>
