--- a/WPF.UserControls/Calculation.xaml
+++ b/WPF.UserControls/Calculation.xaml
@@ -5,17 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Telesyk.GraphCalculator.WPF.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="295" d:DesignWidth="673" Height="295" Width="673">
+             d:DesignHeight="337" d:DesignWidth="673" Height="337" Width="673">
 	<StackPanel>
 		<TextBlock Grid.Column="0" Foreground="#FFF9EFB8" FontSize="20" Margin="5,0,0,0">Обчислення</TextBlock>
 		<StackPanel Orientation="Horizontal">
-			<Label Foreground="#024884" Target="{Binding ElementName=listThreading}">Багатопоточне обчислення:</Label>
+			<!--<Label Foreground="#024884" Target="{Binding ElementName=listThreading}">Багатопоточне обчислення:</Label>
 			<ComboBox x:Name="listThreading" Width="200" Height="26" Margin="8,0,0,0" Foreground="#024884" IsEnabled="false">
 				<ComboBoxItem IsSelected="True" ToolTip="Обчислювання відбуватиметься без розбивки задач на окремі потоки">Не використовувати</ComboBoxItem>
-				<ComboBoxItem ToolTip="Обчислення розбиватиметься на окремі потоки для кожного значення множини як X1 у розміщенні">За елементами множини</ComboBoxItem>
+				<ComboBoxItem ToolTip="Обчислення розбиватиметься на окремі потоки для кожного значення множини у якості X1 у розміщенні">За елементами множини</ComboBoxItem>
 				<ComboBoxItem ToolTip="Розпаралелювання задач бібліотеки TPL">Паралелізм TPL</ComboBoxItem>
-			</ComboBox>
-			<Button HorizontalAlignment="Right" Width="Auto" IsEnabled="False" Foreground="#024884" Margin="8,0,0,0" FontSize="11" Height="26" Padding="4,0,4,1" Cursor="Hand" Background="#FFF9EFB8" Click="Button_Click" MouseLeave="button_MouseLeave" MouseRightButtonUp="button_MouseUp">Розпочати обчислювання</Button>
-	</StackPanel>
+			</ComboBox>-->
+			<Button x:Name="buttonStart" HorizontalAlignment="Right" Width="Auto" IsEnabled="False" Foreground="#024884" Margin="5,8,0,0" FontSize="11" Height="26" Padding="4,0,4,1" Cursor="Hand" Background="#FFF9EFB8" Click="button_Click">Розпочати обчислення</Button>
+		</StackPanel>
+		<StackPanel x:Name="panelResultInfo" Height="99" Visibility="Collapsed">
+			<TextBlock Margin="5,3,5,3" Foreground="White">Комбінацій всього: <Run x:Name="textConbinations" Foreground="#024884"></Run></TextBlock>
+			<TextBlock Margin="5,3,5,3" Foreground="White">Тривалість: <Run x:Name="textDuration" Foreground="#024884"></Run></TextBlock>
+			<TextBlock Margin="5,3,5,3" Foreground="White">Результат: <Run x:Name="textResult" Foreground="#024884"></Run></TextBlock>
+			<TextBlock Margin="5,3,5,3" Foreground="White">Комбінацій: <Run x:Name="textResultCombinations" Foreground="#024884"></Run></TextBlock>
+		</StackPanel>
+		<ScrollViewer x:Name="scrollResults" Margin="0,5,0,0" Padding="0,0,0,5" Height="173" Visibility="Collapsed">
+			<StackPanel x:Name="panelResults"></StackPanel>
+		</ScrollViewer>
 	</StackPanel>
 </UserControl>
