--- a/WPF.UserControls/Functions.xaml
+++ b/WPF.UserControls/Functions.xaml
@@ -5,12 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Telesyk.GraphCalculator.WPF.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="295" d:DesignWidth="673" Height="295" Width="673">
+             d:DesignHeight="295" d:DesignWidth="673" Height="337" Width="673">
 	<StackPanel>
 		<Grid>
 			<TextBlock x:Name="textTitle" Grid.Row="1" Grid.Column="0" Foreground="#FFF9EFB8" FontSize="20" Margin="5,0,5,5">Функції</TextBlock>
 			<local:ActionsUserControl Grid.Row="1" x:Name="controlActions" Grid.Column="1" HorizontalAlignment="Right" />
 		</Grid>
 		<StackPanel x:Name="panelFunctions" />
+		<StackPanel x:Name="panelCombined" Orientation="Vertical" Visibility="Collapsed">
+			<TextBlock Foreground="White" Margin="5,0,0,0">Комбінована функція:</TextBlock><TextBlock x:Name="textCombined" Margin="5,0,0,0" Foreground="#024884" />
+		</StackPanel>
 	</StackPanel>
 </UserControl>
